CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
30-08-05    Turkish translation added (Metin Tinay)
30-08-05    Added the db function unix_timestamp for oracle and postgres (Tobias Kuckuck)
30-08-05    Added missing passwordmgr_redirecttoedit permission (Tobias Kuckuck)
29-08-05    Renamed ConfigMgr's '_insert' method to '_update' to correctly reflect action, 
            sql upgrade file provided in etc/sql_upgrades
29-08-05    Added some permission descriptions (Rolandas Burbulis)
23-08-05    Added ability to view login history for a given user (Rolandas Burbulis)
23-08-05    Release script now uploads API docs to sgl site for browsing
19-08-05    Changed CSS z-index in style.php so FCK downdowns are not hidden
19-08-05    Routine to get page execution time was improved to be more accurate, it    
            it now reports the same times as ZDE (Jochem Gugelot).

+-----------------------+
| VERSION: 0.4.5        |
+-----------------------+
BUGFIXES
18-08-05    Longtime outstanding bug where db session handling was broken has
            been fixed (Louay Gammo)
10-08-05    Fixed bug where editing articles 'remembered' the GUI category, not
            the article category
10-08-05    Fixed verticalSimple.css to work with new CSS
08-08-05    Removed quoting of chartset=utf-8 (Ernest Beinrohr)
01-08-05    Added php5 workaround in SGL_Wizard because strict call by reference
            behaviour (Tobias Kuckuck)
01-08-05    SGL_Item::getDynamicFields now returns a string of html representing
            the fields, or alternatively an array of just the data. (Fabio Bacigalupo)
01-08-05    Removed obselete stylesheets