@@ -327,4 +327,9 @@ if (!(function_exists('file_put_contents'))) {
         return true;
     }
 }
+
+if (!function_exists('clone')) {
+    // emulate clone  - as per php_compact, slow but really the correct behaviour..
+    eval('function clone($t) { $r = $t; if (method_exists($r,"__clone")) { $r->__clone(); } return $r; }');
+}
 ?>
