@@ -13,6 +13,9 @@ IMPROVEMENTS
 | VERSION: 0.4.6        |
 +-----------------------+
 BUGFIXES
+30-08-05    Moved clone() emulation into constants.php
+30-08-05    Added workaround in lib/pear/Config/Container.php for php 5.1 $this 
+            issues.
 
 IMPROVEMENTS
 30-08-05    Turkish translation added (Metin Tinay)
